# atlas

./: .dockerignore  .gitignore  README.md
.github/workflows/: ci-go.yml  ci-python.yml  ci-rust.yml
ai-service/: Dockerfile  pyproject.toml
ai-service/atlas_ai/: config.py  explain.py  server.py
ai-service/atlas_ai/insights/: __init__.py  narrate.py  suggest.py
ai-service/atlas_ai/pb/: ai_pb2.py  ai_pb2.pyi  ai_pb2_grpc.py
ai-service/atlas_ai/plan/: __init__.py  planner.py  prompt.py  schema.py
ai-service/atlas_ai/providers/: __init__.py  base.py  litellm_provider.py
ai-service/tests/: conftest.py  golden_cases.py  test_explain.py  test_insights.py  test_nl_to_plan.py
coordinator/: Dockerfile  go.mod  go.sum
coordinator/cmd/catalog/: main.go
coordinator/cmd/coordinator/: main.go
coordinator/cmd/tokengen/: main.go
coordinator/internal/aipb/: ai.pb.go  ai_grpc.pb.go
coordinator/internal/api/: insights.go  insights_test.go  middleware.go  server.go  server_test.go
coordinator/internal/auth/: auth.go
coordinator/internal/cache/: cache.go  cache_test.go
coordinator/internal/catalog/: migrate.go  service.go  service_test.go
coordinator/internal/catalog/migrations/: 0001_datasets.sql  0002_snapshots.up.sql  0003_manifests.up.sql  0004_query_history.sql  0005_dataset_snapshot_fk.up.sql  0006_manifest_format.sql  0007_workspaces_users.up.sql
coordinator/internal/catalogpb/: catalog.pb.go  catalog_grpc.pb.go
coordinator/internal/history/: history.go
coordinator/internal/observability/: grpcmetrics.go  tracing.go
coordinator/internal/planjson/: planjson.go  planjson_test.go
coordinator/internal/scheduler/: coordinator.go  integration_test.go  partition_prune.go  partition_prune_test.go  registry.go
coordinator/internal/workerpb/: worker.pb.go  worker_grpc.pb.go
deploy/: docker-compose.yml  prometheus.yml
docs/: atlas-implementation-spec.md
engine/: Cargo.toml  Dockerfile
engine/crates/atlas-cli/: Cargo.toml  build.rs
engine/crates/atlas-cli/src/: catalog_pb.rs  main.rs
engine/crates/atlas-cli/tests/: csv_end_to_end.rs
engine/crates/atlas-cli/tests/fixtures/: patients.csv
engine/crates/atlas-exec/: Cargo.toml
engine/crates/atlas-exec/src/: aggregate.rs  expr.rs  lib.rs  ops.rs  scalar.rs
engine/crates/atlas-format/: Cargo.toml  build.rs
engine/crates/atlas-format/src/: footer.rs  format_tests.rs  hll.rs  iceberg.rs  lib.rs  page.rs  parquet.rs  partition.rs  reader.rs  stats.rs  writer.rs
engine/crates/atlas-format/tests/fixtures/iceberg_sample/atlas_test/patients/data/hospital=mercy/: 00000-0-705ae5d5-969e-406c-a598-1fd4662c349a.parquet
engine/crates/atlas-format/tests/fixtures/iceberg_sample/atlas_test/patients/data/hospital=stmarys/: 00000-1-705ae5d5-969e-406c-a598-1fd4662c349a.parquet
engine/crates/atlas-format/tests/fixtures/iceberg_sample/atlas_test/patients/metadata/: 00000-51f9ac01-d9a7-4d6d-a05c-637ccf5ba873.metadata.json  00001-d5f27bc3-c3b0-43e9-a43a-74201e3a3083.metadata.json  00002-54055c3d-433b-4854-aa0b-3b07f5f1e460.metadata.json  705ae5d5-969e-406c-a598-1fd4662c349a-m0.avro  snap-5627714228312090250-0-705ae5d5-969e-406c-a598-1fd4662c349a.avro
engine/crates/atlas-insights/: Cargo.toml
engine/crates/atlas-insights/src/: lib.rs  outlier.rs  quality.rs  summary.rs  trend.rs
engine/crates/atlas-optimizer/: Cargo.toml
engine/crates/atlas-optimizer/src/: column_pruning.rs  lib.rs  predicate_pushdown.rs
engine/crates/atlas-query/: Cargo.toml
engine/crates/atlas-query/src/: lib.rs  plan.rs  sql.rs
engine/crates/atlas-storage/: Cargo.toml
engine/crates/atlas-storage/src/: lib.rs  store.rs
engine/crates/atlas-worker/: Cargo.toml  build.rs
engine/crates/atlas-worker/src/: e2e_test.rs  ipc.rs  main.rs  obs_metrics.rs  service.rs  split.rs  telemetry.rs  worker_pb.rs
proto/: ai.proto  catalog.proto  format.proto  generate.sh  plan.proto  worker.proto
