[workspace]
resolver = "2"
members = [
    "crates/atlas-format",
    "crates/atlas-storage",
    "crates/atlas-query",
    "crates/atlas-exec",
    "crates/atlas-cli",
    "crates/atlas-worker",
]

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
arrow = "53"
arrow-csv = "53"
csv = "1"
sqlparser = "0.51"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
prost = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3"
lz4_flex = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
tonic-build = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
object_store = "0.11"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
