[package]
name = "atlas-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
anyhow = { workspace = true }
atlas-format = { path = "../atlas-format" }
atlas-storage = { path = "../atlas-storage" }
atlas-query = { path = "../atlas-query" }
atlas-exec = { path = "../atlas-exec" }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
