[package]
name = "atlas-format"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, features = ["ipc"] }
arrow-schema = { version = "53", features = ["serde"] }
csv = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
lz4_flex = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
tempfile = "3"
