[package]
name = "atlas-format"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, features = ["ipc"] }
arrow-schema = { version = "53", features = ["serde"] }
parquet = { workspace = true, features = ["arrow"] }
csv = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
lz4_flex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
apache-avro = "0.21"
base64 = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
tempfile = "3"
