[package]
name = "atlas-storage"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-csv = { workspace = true }
regex = "1"
csv = { workspace = true }
anyhow = { workspace = true }
atlas-format = { path = "../atlas-format" }
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
